Updated Crowbar with new branding

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "boilerplate",
     "setup"
   ],
-  "author": "MDEV Digital Inc.",
+  "author": "Lucas Moreira (hello@lucasmoreira.dev)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MoreiraDevelopment/crowbar/issues"
