--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moreira-development/crowbar-sass",
+  "name": "crowbar-sass",
   "version": "0.1.3",
   "description": "SASS Boilerplate for kicking off Projects",
   "main": "/styles/global-main.scss",
